--- a/src/components/styles/layout.css
+++ b/src/components/styles/layout.css
@@ -7,15 +7,22 @@
 
 a {
     color: #636363;
+    box-shadow: none;
 }
 
 .nav {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding-bottom: 2em;
+    padding: 0.5em;
+    margin-bottom: 2em;
     color: gray;
     text-decoration-line: none;
+    background-color: white;
+    border-radius: 2em;
+    -webkit-box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
+    box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
 }
 
 a:hover {
