primera parte dark theme

--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -17,6 +17,37 @@
     text-align: left;
 }
 
+.light {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.dark {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+.infoDark {
+    box-shadow: 0 29px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+    padding: 1em;
+    border-radius: 1em;
+    margin: 3em 0em;
+    background-color: #2d3562;
+    color: white;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    text-align: left;
+}
+
+.colorFontDark {
+    color: #ffffff;
+}
+
+.colorFont {
+    color: #000000;
+}
+
 img {
     width: 20vw;
     height: 35vh;
