--- a/src/components/styles/layout.css
+++ b/src/components/styles/layout.css
@@ -7,6 +7,21 @@
     border-bottom-right-radius: 1em;
 }
 
+.topBarDark {
+    background-color: #2d3562;
+    padding: 1em;
+    position: relative;
+    margin-bottom: 3em;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
+}
+
+#iconTheme {
+    width: 3vw;
+    height: 5vh;
+    margin: 0;
+}
+
 a {
     color: #636363;
     box-shadow: none;
@@ -27,10 +42,29 @@ a {
     box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
 }
 
+.navDark {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0.5em;
+    margin-bottom: 2em;
+    color: white;
+    text-decoration-line: none;
+    background-color: #121212;
+    border-radius: 2em;
+    -webkit-box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
+    box-shadow: 0px 5px 13px 0px rgba(50, 50, 50, 0.75);
+}
+
 a:hover {
     color: #000000;
 }
 
 @media (max-width: 400px) {
-    .movil {}
+    #iconTheme {
+        width: 8vw;
+        height: 5vh;
+        margin: 0;
+    }
 }
