--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -24,7 +24,7 @@
 
 .dark {
     background-color: #121212;
-    color: #ffffff;
+    color: #ffffff !important;
 }
 
 .infoDark {
@@ -51,6 +51,13 @@
 img {
     width: 20vw;
     height: 35vh;
+}
+
+.btnColor {
+    background-color: #202542;
+    color: #ffffff;
+    border-radius: 1em;
+    padding: 0.5em;
 }
 
 @media (max-width: 400px) {
