--- a/src/components/styles/layout.css
+++ b/src/components/styles/layout.css
@@ -16,6 +16,10 @@
     border-bottom-right-radius: 1em;
 }
 
+.register {
+    text-align: center;
+}
+
 #iconTheme {
     width: 3vw;
     height: 5vh;
@@ -64,6 +68,38 @@ a:hover {
 @media (max-width: 400px) {
     #iconTheme {
         width: 8vw;
+        height: 5vh;
+        margin: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    #iconTheme {
+        width: 6vw;
+        height: 5vh;
+        margin: 0;
+    }
+}
+
+@media (max-width: 425px) {
+    #iconTheme {
+        width: 8vw;
+        height: 5vh;
+        margin: 0;
+    }
+}
+
+@media (min-width: 1024px) {
+    #iconTheme {
+        width: 6vw;
+        height: 5vh;
+        margin: 0;
+    }
+}
+
+@media (min-width: 1050px) {
+    #iconTheme {
+        width: 4vw;
         height: 5vh;
         margin: 0;
     }
